@@ -1,6 +1,5 @@
 package no.nav.foreldrepenger.mottak.innsending.pdf.modell;
 
-import java.util.Arrays;
 import java.util.List;
 
 import com.fasterxml.jackson.databind.PropertyNamingStrategies;
@@ -19,6 +18,6 @@ public class ListeBlokk extends Blokk {
     private List<String> punkter;
 
     public ListeBlokk(String tittel, String... punkter) {
-        this(tittel, Arrays.asList(punkter));
+        this(tittel, List.of(punkter));
     }
 }
